--- a/paper/main.tex
+++ b/paper/main.tex
@@ -1,35 +1,4 @@
-\documentclass[10pt,journal,compsoc]{IEEEtran}
-%
-% If IEEEtran.cls has not been installed into the LaTeX system files,
-% manually specify the path to it like:
-% \documentclass[10pt,journal,compsoc]{../sty/IEEEtran}
-
-
-
-
-
-% Some very useful LaTeX packages include:
-% (uncomment the ones you want to load)
-
-
-% *** MISC UTILITY PACKAGES ***
-%
-
-% Heiko Oberdiek's ifpdf.sty is very useful if you need conditional
-% compilation based on whether the output is pdf or dvi.
-% usage:
-% \ifpdf
-%   % pdf code
-% \else
-%   % dvi code
-% \fi
-% The latest version of ifpdf.sty can be obtained from:
-% http://www.ctan.org/pkg/ifpdf
-% Also, note that IEEEtran.cls V1.7 and later provides a builtin
-% \ifCLASSINFOpdf conditional that works the same way.
-% When switching from latex to pdflatex and vice-versa, the compiler may
-% have to be run twice to clear warning/error messages.
-
+\documentclass[10pt,letterpaper]{article}
 \usepackage{ifpdf}
 \ifpdf%                                % if we use pdflatex
   \pdfoutput=1\relax                   % create PDFs from pdfLaTeX
@@ -48,120 +17,7 @@
 
 
 
-% *** CITATION PACKAGES ***
-%
-\ifCLASSOPTIONcompsoc
-  % IEEE Computer Society needs nocompress option
-  % requires cite.sty v4.0 or later (November 2003)
-  \usepackage[nocompress]{cite}
-\else
-  % normal IEEE
-  \usepackage{cite}
-\fi
-% cite.sty was written by Donald Arseneau
-% V1.6 and later of IEEEtran pre-defines the format of the cite.sty package
-% \cite{} output to follow that of the IEEE. Loading the cite package will
-% result in citation numbers being automatically sorted and properly
-% "compressed/ranged". e.g., [1], [9], [2], [7], [5], [6] without using
-% cite.sty will become [1], [2], [5]--[7], [9] using cite.sty. cite.sty's
-% \cite will automatically add leading space, if needed. Use cite.sty's
-% noadjust option (cite.sty V3.8 and later) if you want to turn this off
-% such as if a citation ever needs to be enclosed in parenthesis.
-% cite.sty is already installed on most LaTeX systems. Be sure and use
-% version 5.0 (2009-03-20) and later if using hyperref.sty.
-% The latest version can be obtained at:
-% http://www.ctan.org/pkg/cite
-% The documentation is contained in the cite.sty file itself.
-%
-% Note that some packages require special options to format as the Computer
-% Society requires. In particular, Computer Society  papers do not use
-% compressed citation ranges as is done in typical IEEE papers
-% (e.g., [1]-[4]). Instead, they list every citation separately in order
-% (e.g., [1], [2], [3], [4]). To get the latter we need to load the cite
-% package with the nocompress option which is supported by cite.sty v4.0
-% and later. Note also the use of a CLASSOPTION conditional provided by
-% IEEEtran.cls V1.7 and later.
-
-
-
-
-
-% *** GRAPHICS RELATED PACKAGES ***
-%
-\ifCLASSINFOpdf
-  % \usepackage[pdftex]{graphicx}
-  % declare the path(s) where your graphic files are
-  % \graphicspath{{../pdf/}{../jpeg/}}
-  % and their extensions so you won't have to specify these with
-  % every instance of \includegraphics
-  % \DeclareGraphicsExtensions{.pdf,.jpeg,.png}
-\else
-  % or other class option (dvipsone, dvipdf, if not using dvips). graphicx
-  % will default to the driver specified in the system graphics.cfg if no
-  % driver is specified.
-  % \usepackage[dvips]{graphicx}
-  % declare the path(s) where your graphic files are
-  % \graphicspath{{../eps/}}
-  % and their extensions so you won't have to specify these with
-  % every instance of \includegraphics
-  % \DeclareGraphicsExtensions{.eps}
-\fi
-% graphicx was written by David Carlisle and Sebastian Rahtz. It is
-% required if you want graphics, photos, etc. graphicx.sty is already
-% installed on most LaTeX systems. The latest version and documentation
-% can be obtained at: 
-% http://www.ctan.org/pkg/graphicx
-% Another good source of documentation is "Using Imported Graphics in
-% LaTeX2e" by Keith Reckdahl which can be found at:
-% http://www.ctan.org/pkg/epslatex
-%
-% latex, and pdflatex in dvi mode, support graphics in encapsulated
-% postscript (.eps) format. pdflatex in pdf mode supports graphics
-% in .pdf, .jpeg, .png and .mps (metapost) formats. Users should ensure
-% that all non-photo figures use a vector format (.eps, .pdf, .mps) and
-% not a bitmapped formats (.jpeg, .png). The IEEE frowns on bitmapped formats
-% which can result in "jaggedy"/blurry rendering of lines and letters as
-% well as large increases in file sizes.
-%
-% You can find documentation about the pdfTeX application at:
-% http://www.tug.org/applications/pdftex
-
-
-
-
-
-
-% *** MATH PACKAGES ***
-%
 \usepackage{amsmath}
-% A popular package from the American Mathematical Society that provides
-% many useful and powerful commands for dealing with mathematics.
-%
-% Note that the amsmath package sets \interdisplaylinepenalty to 10000
-% thus preventing page breaks from occurring within multiline equations. Use:
-%\interdisplaylinepenalty=2500
-% after loading amsmath to restore such page breaks as IEEEtran.cls normally
-% does. amsmath.sty is already installed on most LaTeX systems. The latest
-% version and documentation can be obtained at:
-% http://www.ctan.org/pkg/amsmath
-
-
-\usepackage{algpseudocode} 
-\usepackage{algorithm}
-\usepackage{url}
-\usepackage{hyperref}
-
-
-% *** Do not adjust lengths that control margins, column widths, etc. ***
-% *** Do not use packages that alter fonts (such as pslatex).         ***
-% There should be no need to do such things with IEEEtran.cls V1.6 and later.
-% (Unless specifically asked to do so by the journal or conference you plan
-% to submit to, of course. )
-
-
-% correct bad hyphenation here
-%\hyphenation{op-tical net-works semi-conduc-tor}
-
 \newcommand{\G}{\ensuremath{G}}
 \newcommand{\V}{\ensuremath{V}}
 \newcommand{\vertice}{\ensuremath{v}}
@@ -172,186 +28,124 @@
 \newcommand{\relevance}{\ensuremath{R}}
 \newcommand{\cluster}{\ensuremath{\mathcal{C}}}
 \newcommand{\watershed}{\ensuremath{\psi}}
-
-
+\newcommand{\censure}[1]{}
 \DeclareMathOperator*{\median}{\ensuremath{\text{median}}}
+
+
+%TODO macros
+\usepackage{xargs}
+\usepackage[pdftex,dvipsnames]{xcolor} 
+\usepackage[colorinlistoftodos,prependcaption,textsize=tiny]{todonotes}
+\newcommandx{\unsure}[2][1=]{\todo[linecolor=red,backgroundcolor=red!25,bordercolor=red,#1]{#2}}
+\newcommandx{\change}[2][1=]{\todo[linecolor=blue,backgroundcolor=blue!25,bordercolor=blue,#1]{#2}}
+\newcommandx{\info}[2][1=]{\todo[linecolor=OliveGreen,backgroundcolor=OliveGreen!25,bordercolor=OliveGreen,#1]{#2}}
+\newcommandx{\improvement}[2][1=]{\todo[linecolor=Plum,backgroundcolor=Plum!25,bordercolor=Plum,#1]{#2}}
+\newcommandx{\thiswillnotshow}[2][1=]{\todo[disable,#1]{#2}}
+
+\usepackage{natbib}
+\usepackage{algpseudocode} 
+\usepackage{algorithm}
+\usepackage{url}
+\usepackage{hyperref}
+\usepackage{subfig}
+\usepackage{tikz}
+
   
 
-% \usepackage[switch]{lineno}
-% \linenumbers
+\usepackage[switch]{lineno}
+%\linenumbers
 
+\usepackage{setspace}
+\usepackage[margin=1.25in]{geometry}
 
 \begin{document}
-%
-% paper title
-% Titles are generally capitalized except for words such as a, an, and, as,
-% at, but, by, for, in, nor, of, on, or, the, to and up, which are usually
-% not capitalized unless they are the first or last word of the title.
-% Linebreaks \\ can be used within to get better formatting as desired.
-% Do not put math or special symbols in the title.
-\title{Visualizing demographic evolution using \\geographically inconsistent census data}
-%
-%
-% author names and IEEE memberships
-% note positions of commas and nonbreaking spaces ( ~ ) LaTeX will not break
-% a structure at a ~ so this keeps an author's name from being broken across
-% two lines.
-% use \thanks{} to gain access to the first footnote area
-% a separate \thanks must be used for each paragraph as LaTeX2e's \thanks
-% was not built to handle multiple paragraphs
-%
-%
-%\IEEEcompsocitemizethanks is a special \thanks that produces the bulleted
-% lists the Computer Society journals use for "first footnote" author
-% affiliations. Use \IEEEcompsocthanksitem which works much like \item
-% for each affiliation group. When not in compsoc mode,
-% \IEEEcompsocitemizethanks becomes like \thanks and
-% \IEEEcompsocthanksitem becomes a line break with idention. This
-% facilitates dual compilation, although admittedly the differences in the
-% desired content of \author between the different types of papers makes a
-% one-size-fits-all approach a daunting prospect. For instance, compsoc 
-% journal papers have the author affiliations above the "Manuscript
-% received ..."  text while in non-compsoc journals this is reversed. Sigh.
 
-\author{Fabio~Dias and~Daniel~Silver% <-this % stops a space
-        \IEEEcompsocitemizethanks{\IEEEcompsocthanksitem F. Dias is with the
-        Department of Mechanical \& Industrial Engineering, University of
-        Toronto, Toronto, ON, M5S 3G8.\protect\\
-% note need leading \protect in front of \\ to get a newline within \thanks as
-% \\ is fragile and will error, could use \hfil\break instead.
-E-mail: fabio.dias@utoronto.ca
-\IEEEcompsocthanksitem D. Silver is with the Department of Sociology, University of
-Toronto, Toronto, ON, M5S 2J4.\protect\\
-E-mail: dsilver@utsc.utoronto.ca
-}% <-this % stops an unwanted space
-\thanks{Manuscript received MMMM DD, YYYY; revised MMMM DD, YYYY.}}
-
-% note the % following the last \IEEEmembership and also \thanks - 
-% these prevent an unwanted space from occurring between the last author name
-% and the end of the author line. i.e., if you had this:
-% 
-% \author{....lastname \thanks{...} \thanks{...} }
-%                     ^------------^------------^----Do not want these spaces!
-%
-% a space would be appended to the last name and could cause every name on that
-% line to be shifted left slightly. This is one of those "LaTeX things". For
-% instance, "\textbf{A} \textbf{B}" will typeset as "A B" not "AB". To get
-% "AB" then you have to do: "\textbf{A}\textbf{B}"
-% \thanks is no different in this regard, so shield the last } of each \thanks
-% that ends a line with a % and do not let a space in before the next \thanks.
-% Spaces after \IEEEmembership other than the last one are OK (and needed) as
-% you are supposed to have spaces between the names. For what it is worth,
-% this is a minor point as most people would not even notice if the said evil
-% space somehow managed to creep in.
+\pagestyle{empty}
+\listoftodos[TODO]
+\newpage
 
 
-
-% The paper headers
-%\markboth{Journal of \LaTeX\ Class Files,~Vol.~14, No.~8, August~2015}%
-%{Shell \MakeLowercase{\textit{et al.}}: Bare Demo of IEEEtran.cls for Computer Society Journals}
-% The only time the second header will appear is for the odd numbered pages
-% after the title page when using the twoside option.
-% 
-% *** Note that you probably will NOT want to include the author's ***
-% *** name in the headers of peer review papers.                   ***
-% You can use \ifCLASSOPTIONpeerreview for conditional compilation here if
-% you desire.
-
-
-
-% The publisher's ID mark at the bottom of the page is less important with
-% Computer Society journal papers as those publications place the marks
-% outside of the main text columns and, therefore, unlike regular IEEE
-% journals, the available text space is not reduced by their presence.
-% If you want to put a publisher's ID mark on the page you can do it like
-% this:
-%\IEEEpubid{0000--0000/00\$00.00~\copyright~2015 IEEE}
-% or like this to get the Computer Society new two part style.
-%\IEEEpubid{\makebox[\columnwidth]{\hfill 0000--0000/00/\$00.00~\copyright~2015 IEEE}%
-%\hspace{\columnsep}\makebox[\columnwidth]{Published by the IEEE Computer Society\hfill}}
-% Remember, if you use this you must call \IEEEpubidadjcol in the second
-% column for its text to clear the IEEEpubid mark (Computer Society jorunal
-% papers don't need this extra clearance.)
-
-
-
-% use for special paper notices
-%\IEEEspecialpapernotice{(Invited Paper)}
-
-
-
-% for Computer Society papers, we must declare the abstract and index terms
-% PRIOR to the title within the \IEEEtitleabstractindextext IEEEtran
-% command as these need to go into the title area created by \maketitle.
-% As a general rule, do not put math, special symbols or citations
-% in the abstract or keywords.
-\IEEEtitleabstractindextext{%
-\begin{abstract}
-  We propose a visual analytics system that enables the exploration evolutionary
-  patterns in geographically inconsistent data, removing the need for
-  harmonization of the geographical regions into a common geometry, a time
-  consuming and error-prone process that is currently used in virtually all
-  longitudinal analysis of geographical data. This work also includes
-  incremental developments in the representation, clustering, and visual
-  exploration of region-based geographical data. While we leverage the well
-  known context of census data, our proposal is suitable for any region-based
-  data. The method enables an easier identification and understanding of the
-  demographic groups present in a city and their evolution over time. We present
-  the feedback of experts in urban sciences and sociology, along with
-  illustrative scenarios in the USA and Canada on the decennial censuses between
-  1970 and 2010.
-\end{abstract}
-
-% Note that keywords are not normally used for peerreview papers.
-%\begin{IEEEkeywords}
-%
-%\end{IEEEkeywords}
-}
-
-
-% make the title area
+\doublespacing
+\title{Unharmonised longitudinal data processing using networks}
+\author{}
 \maketitle
 
+% ====== CFP
+% Neighborhoods are increasingly central constructs in the social sciences,
+% serving as spatio-temporal frames for the analysis of a host of questions.
+% Yet, much debate surrounds the role of neighborhood effects in many
+% socioeconomic processes and the ability of traditional notions of
+% neighborhoods to fully express context. Parallel to this, there have been
+% calls for a move away from the view of neighborhoods as fixed-static
+% containers and towards one where neighborhoods undergo dynamic evolution that
+% requires study in its own right. Despite the recent renewed interest in
+% neighborhood effects and neighborhood dynamics, these two literatures remain
+% largely separate.
 
-% To allow for easy dual compilation without having to reenter the
-% abstract/keywords data, the \IEEEtitleabstractindextext text will
-% not be used in maketitle, but will appear (i.e., to be "transported")
-% here as \IEEEdisplaynontitleabstractindextext when the compsoc 
-% or transmag modes are not selected <OR> if conference mode is selected 
-% - because all conference papers position the abstract like regular
-% papers do.
-\IEEEdisplaynontitleabstractindextext
-% \IEEEdisplaynontitleabstractindextext has no effect when using
-% compsoc or transmag under a non-conference mode.
+% This special issue seeks to redress this situation by bringing together recent
+% work at the intersection of neighborhood effects and dynamics. We are inviting
+% submissions dedicated to a special issue of Geographical Analysis on
+% Neighborhood Dynamics and Neighborhood Effects. Papers in the following areas
+% are particularly welcome, as long as they pertain to the general theme of the
+% special issue:
+
+% Neighborhood as context
+% Neighborhood change
+% Neighborhood exposure histories
+% Spatial data science approaches to the neighborhood construct
+% Neighborhood effects
+% Longitudinal analysis of neighborhoods
+% Boundary change and harmonization
+% Use of novel data sources in neighborhood analysis
+% Innovative qualitative, mixed-methods, or quantitative approaches for
+% analyzing neighborhood dynamics or effects
+% Geodemographic approaches
+% Submissions will be refereed according to the standard procedures of Geographical Analysis.
+
+% Information about the journal can be found at: https://onlinelibrary.wiley.com/journal/15384632
+
+% Import Dates
+
+% Full paper Submission: June 15, 2019
+% Initial review feedback: October 15, 2019
+% Revision due: February 15, 2020
+% Final publication decision: May 15, 2020
+
+% ==== Annotation commands
+% \todo{Thing to do}
+% \unsure{Is this correct?}
+% \change{Change this!}
+% \info{Reminder of something}
+% \improvement{This really needs to be improved!}
 
 
+\begin{abstract}
+  The main contribution of this work is the use of a simple network representation
+  to allow the processing of spatio-temporal demographic data for the
+  identification of data-driven neighbourhoods and their dynamics, \emph{without
+  the need for geographical harmonisation}, a laborious and error-prone process
+  that is currently used in virtually all longitudinal analysis of region-based
+  data.
+    
+  To allow for a transparent corroboration of our method, we leverage it as
+  basis for an interactive and intuitive interface that allows a progressive
+  exploration of the results, from the characterisation of broad patterns to the
+  identification of individual details and direct access to the original data,
+  including to non-experts. 
 
-% For peer review papers, you can put extra information on the cover
-% page as needed:
-% \ifCLASSOPTIONpeerreview
-% \begin{center} \bfseries EDICS Category: 3-BBND \end{center}
-% \fi
-%
-% For peerreview papers, this IEEEtran command inserts a page break and
-% creates the second title. It will be ignored for other modes.
-\IEEEpeerreviewmaketitle
+  
+  We validate our method with illustrative scenarios for Chicago, Toronto, and
+  Los Angeles, with results that match recent literature. The system is publicly
+  available, with data from the decennial censuses for over forty regions in the
+  USA and Canada between 1970 and 2010, but the methodology is suitable for any
+  region-based data.
+\end{abstract}
 
-
-
-\IEEEraisesectionheading{\section{Introduction}\label{sec:introduction}}
-% Computer Society journal (but not conference!) papers do something unusual
-% with the very first section heading (almost always called "Introduction").
-% They place it ABOVE the main text! IEEEtran.cls does not automatically do
-% this for you, but you can achieve this effect with the provided
-% \IEEEraisesectionheading{} command. Note the need to keep any \label that
-% is to refer to the section immediately after \section in the above as
-% \IEEEraisesectionheading puts \section within a raised box.
-
+\section{Introduction}\label{sec:introduction}
+% These are separate files, you can open them on the menu on the left
 \input{intro}
 
 \input{related}
-
-% \input{design}
 
 \input{method}
 
@@ -361,129 +155,43 @@ E-mail: dsilver@utsc.utoronto.ca
 
 
 \section{Conclusion}
-Our objective was to allow for the exploration of census data without
-geographical harmonization, an original alternative to a challenging and
-error-prone process. Our method was able to corroborate previous findings from
-the specialized literature, with an increased level of detail due to our data
-representation and visualization choices. The feedback from experts was positive
-and most of them were able to extract insight from the prototype and
-demonstrated interest in using it on their research efforts. Indeed, the experts
-also demonstrated further interest in similar tools, indicating that visual
-analytics methods can be valuable in this field. 
+The objective of this work was to demonstrate that longitudinal studies of
+evolving regions can be performed without geographical harmonisation. We
+proposed an alternative methodology that robustly considers the data in its
+original geography, without the creation of arbitrary artificial data points.
+
+This methodology was then used to create a publicly accessible system, with an
+interactive and intuitive interface, allowing a transparent evaluation and
+replication of our results. We used this interface to corroborate results from
+the literature and we hope that it will be used to corroborate future results as
+well. 
+
+The feedback from experts was positive and most of them were able to extract
+insight from the prototype while indicating interest in using it for their
+research efforts. Indeed, the experts also demonstrated further interest in
+similar tools, indicating that visual analytics methods that leverage user
+interaction can be valuable in this field.  Since our interface can be used by
+non-experts as well, we also contributed to scientific dissemination and
+stakeholder transparency in urban sciences.
 
 
+More importantly, we introduced a new idea that, apparently, was never
+considered in the literature. While significant resources were used trying to
+improve geographical harmonisation, nobody questioned if it was really
+necessary. We proved that it is not necessary, at least for the vast majority of
+demographic studies, especially for  neighbourhood effects and neighbourhood
+dynamics.
 
-% if have a single appendix:
-%\appendix[Proof of the Zonklar Equations]
-% or
-%\appendix  % for no appendix heading
-% do not use \section anymore after \appendix, only \section*
-% is possibly needed
-
-% use appendices with more than one appendix
-% then use \section to start each appendix
-% you must declare a \section before using any
-% \subsection or using \label (\appendices by itself
-% starts a section numbered zero.)
-%
-
-
-% \appendices
-% \section{Proof of the First Zonklar Equation}
-% Appendix one text goes here.
-
-% % you can choose not to have a title for an appendix
-% % if you want by leaving the argument blank
-% \section{}
-% Appendix two text goes here.
-
-
-% use section* for acknowledgment
-\ifCLASSOPTIONcompsoc
-  % The Computer Society usually uses the plural form
-  \section*{Acknowledgements}
-\else
-  % regular IEEE prefers the singular form
-  \section*{Acknowledgement}
-\fi
-
-
+\censure{
+\section*{Acknowledgement}
 This research was supported by a University of Toronto Connaught Global
 Challenge grant and is part of the Urban Genome Project. The authors thank Cary
 Wu, Ethan Fosse, Fernando Calderón Figueroa, Patrick Adler, and James Murdoch
 for their expert opinions; Mark S. Fox, Robert M. Wright, Ultan Byrne, Matti
 Siemiatycki, Shauna Brail, and Richard Florida for general guidance and support;
 and the anonymous reviewers for their constructive comments.
+}
 
-
-
-% Can use something like this to put references on a page
-% by themselves when using endfloat and the captionsoff option.
-\ifCLASSOPTIONcaptionsoff
-  \newpage
-\fi
-
-
-
-% trigger a \newpage just before the given reference
-% number - used to balance the columns on the last page
-% adjust value as needed - may need to be readjusted if
-% the document is modified later
-%\IEEEtriggeratref{8}
-% The "triggered" command can be changed if desired:
-%\IEEEtriggercmd{\enlargethispage{-5in}}
-
-% references section
-
-% can use a bibliography generated by BibTeX as a .bbl file
-% BibTeX documentation can be easily obtained at:
-% http://mirror.ctan.org/biblio/bibtex/contrib/doc/
-% The IEEEtran BibTeX style support page is at:
-% http://www.michaelshell.org/tex/ieeetran/bibtex/
-\bibliographystyle{IEEEtran}
-% argument is your BibTeX string definitions and bibliography database(s)
-\bibliography{IEEEabrv,rev}
-%
-
-% biography section
-% 
-% If you have an EPS/PDF photo (graphicx package needed) extra braces are
-% needed around the contents of the optional argument to biography to prevent
-% the LaTeX parser from getting confused when it sees the complicated
-% \includegraphics command within an optional argument. (You could create
-% your own custom macro containing the \includegraphics command to make things
-% simpler here.)
-%\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{mshell}}]{Michael Shell}
-% or if you just want to reserve a space for a photo:
-
-% \begin{IEEEbiography}{Fabio Dias}
-% Biography text here.
-% \end{IEEEbiography}
-
-% % if you will not have a photo at all:
-% \begin{IEEEbiographynophoto}{Daniel Silver}
-% Biography text here.
-% \end{IEEEbiographynophoto}
-
-% insert where needed to balance the two columns on the last page with
-% biographies
-%\newpage
-
-% You can push biographies down or up by placing
-% a \vfill before or after them. The appropriate
-% use of \vfill depends on what kind of text is
-% on the last page and whether or not the columns
-% are being equalized.
-
-%\vfill
-
-% Can be used to pull up biographies so that the bottom of the last one
-% is flush with the other column.
-%\enlargethispage{-5in}
-
-
-
-% that's all folks
+\bibliographystyle{chicago}
+\bibliography{rev}
 \end{document}
-
-
